--- a/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM/Views/AgregarEmpleadoPage.xaml
+++ b/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM/Views/AgregarEmpleadoPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             NavigationPage.HasNavigationBar="False"
              x:Class="TareaMVVMByMarvinMMM.Views.AgregarEmpleadoPage">
     <ContentPage.Content>
         <StackLayout>
@@ -28,15 +29,17 @@
                 <Entry x:Name="txtApellidos" Grid.Row="3" Placeholder="Apellido del empleado"/>
 
                 <Label Text="Edad:" Grid.Row="4" FontSize="18"/>
-                <Entry x:Name="txtEdad" Grid.Row="5" Placeholder="Edad del empleado"/>
+                <Entry x:Name="txtEdad" Grid.Row="5" Placeholder="Edad del empleado" Keyboard="Numeric"/>
 
                 <Label Text="Direccion:" Grid.Row="6" FontSize="18"/>
                 <Entry x:Name="txtDireccion" Grid.Row="7" Placeholder="Direccion del empleado"/>
 
                 <Label Text="Puesto:" Grid.Row="8" FontSize="18"/>
                 <Entry x:Name="txtPuesto" Grid.Row="9" Placeholder="Puesto del empleado"/>
-                
-                <Button x:Name="btnAgregar" Grid.Row="10" Text="Agregar Empleado"/>
+
+                <Button x:Name="btnAgregar" Grid.Row="10" Text="Agregar Empleado" 
+                         Clicked="btnAgregar_Clicked"
+                       />
             </Grid>
         </StackLayout>
     </ContentPage.Content>
