--- a/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM/Views/EditarEmpleadoPage.xaml
+++ b/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM/Views/EditarEmpleadoPage.xaml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             NavigationPage.HasNavigationBar="False"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TareaMVVMByMarvinMMM.Views.EditarEmpleadoPage">
     <ContentPage.Content>
@@ -32,7 +33,7 @@
                 <Entry x:Name="txtApellidos" Grid.Row="3" Grid.ColumnSpan="2" Placeholder="Apellido del empleado"/>
 
                 <Label Text="Edad:" Grid.Row="4" Grid.ColumnSpan="2" FontSize="18"/>
-                <Entry x:Name="txtEdad" Grid.Row="5" Grid.ColumnSpan="2" Placeholder="Edad del empleado"/>
+                <Entry x:Name="txtEdad" Grid.Row="5" Grid.ColumnSpan="2" Placeholder="Edad del empleado" Keyboard="Numeric"/>
 
                 <Label Text="Direccion:" Grid.Row="6" Grid.ColumnSpan="2" FontSize="18"/>
                 <Entry x:Name="txtDireccion" Grid.Row="7" Grid.ColumnSpan="2" Placeholder="Direccion del empleado"/>
@@ -40,9 +41,10 @@
                 <Label Text="Puesto:" Grid.Row="8" Grid.ColumnSpan="2" FontSize="18"/>
                 <Entry x:Name="txtPuesto" Grid.Row="9" Grid.ColumnSpan="2" Placeholder="Puesto del empleado"/>
 
-                <Button x:Name="btnModificar" Grid.Row="10" Grid.Column="0" Text="Modificar Empleado"/>
-                <Button x:Name="btnEliminar" Grid.Row="10" Grid.Column="1" Text="Eliminar Empleado"/>
+                <Button x:Name="btnModificar" Grid.Row="10" Grid.Column="0" Text="Modificar Empleado" Clicked="btnModificar_Clicked"/>
+                <Button x:Name="btnEliminar" Grid.Row="10" Grid.Column="1" Text="Eliminar Empleado" Clicked="btnEliminar_Clicked"/>
             </Grid>
+            <Label x:Name="txtidempleado" Text="{Binding IdEmpleado}" TextColor="Transparent"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
